# Smart-Pets-Feeder

./: 2.py  3.py  LICENSE  README.md  conn5.STL  ls  ls.pub  matrix.py  test.py  test.txt  thread.py
Another_Software/: CMakeLists.txt  CamThread.cpp  EP_main.cpp  README.md
Mechanical Structure/: README.md  rpi_camera_mount.stl  spfr.stl
Software/: CMakeLists.txt  README.md  control.cpp  feed.cpp  fsr.c  hx711.h  motor.h  step_motor.c  step_motor.cpp  step_motor2.c
Software/lib/: CMakeLists.txt  CamThread.h  hx711.cpp  hx711.h  motor.cpp  motor.h
Software/src/: CMakeLists.txt  feed.cpp
Test/: CMakeCache.txt  FSR_1.cpp  Makefile  OpenCV_test.cpp  cmake_install.cmake  demo5  fsr_test.c
UnitTest/FSR_test/: CMakeLists.txt  fsr.c
UnitTest/HX711_test/: CMakeLists.txt  test.cpp
UnitTest/OpenCV_Canny_test/: test_opencv.cpp
UnitTest/OpenCV_takePhoto_test/: CMakeLists.txt  demo4
UnitTest/OpenCV_test/: CMakeLists.txt  demo6  opencv_demo.py  opencvtakep.cpp
another_software/: CamThread.h  spfr  step_motor.cpp  step_motor.h
test/: test.txt
